# inco-fundraiser

./: Anchor.toml  package-lock.json  package.json  tsconfig.json
programs/inco-private-funding/: Cargo.toml
programs/inco-private-funding/src/: error.rs  lib.rs  state.rs
programs/inco-private-funding/src/instructions/: deposit.rs  initialize_vault.rs  mod.rs  withdraw.rs
tests/: inco-private-funding.ts
tests/idl/: inco_token.json
